Added notes and new course

--- a/Practical_Data_Science_using_Python/sec01_intro_to_ds.ipynb
+++ b/Practical_Data_Science_using_Python/sec01_intro_to_ds.ipynb
@@ -18,7 +18,7 @@
    "id": "8880f9da",
    "metadata": {},
    "source": [
-    "### B. Data Science Introduction and Use Cases"
+    "### B. Data Science Introduction and Use Cases\n"
    ]
   },
   {
